# rtfm-prototype

./: Cargo.toml
.cargo/: config
src/: main.rs
