[package]
name = "rmc-rtfm"
version = "0.1.0"
authors = ["noah <nomaxx117@gmail.com>"]
edition = "2018"

[profile.release]
lto = "fat"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.cortex-m]
version = "0.6.2"

[dependencies.cortex-m-rt]
version = "0.6.12"

#[dependencies.stm32f3]
#features = ["stm32f303", "rt"]
#version = "0.7.1"

[dependencies.cortex-m-rtfm]
version = "0.5.1"

#[dependencies.cortex-m-semihosting]
#version = "0.3.5"

[dependencies.panic-semihosting]
version = "0.5.3"

[dependencies.panic-halt]
version = "0.2.0"

[dependencies.f3]
version = "0.6.1"
features = ["rt"]